--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,12 @@ body {
   .container {
     width: 100%;
     height: 70vh;
+    padding: 15px;
   }
+
+  .screen p {
+  margin: 25px 40px 0 0;
+}
 
   .input input {
     width: 100%;
@@ -104,14 +109,18 @@ body {
     font-size: 28px;
   }
 
+  .input {
+  padding: 0 25px;
+}
+
   .btn {
-    width: 75px;
-    height: 75px;
+    width: 65px;
+    height: 65px;
   }
 
   .negative,
   .divid {
-    width: 75px;
-    height: 75px;
+    width: 65px;
+    height: 65px;
   }
 }
